--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>noote app</title>
+    <title>weather app</title>
     <!-- bootstrap -->
     <!-- CSS only -->
     <link
@@ -26,8 +26,8 @@
     <div class="current-weather">
       <p class="location"></p>
       <div class="curren-temp">
-        <h3 class="temperature">25°C</h3>
-        <p class="weather">cold</p>
+        <h3 class="temperature"></h3>
+        <p class="weather"></p>
       </div>
     </div>
     <div class="upcoming-temp">
