--- a/index.html
+++ b/index.html
@@ -19,40 +19,19 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="result">
-
-  </div>
   <div class="weather-container">
     <div class="current-weather">
       <p class="location"></p>
       <div class="curren-temp">
-        <h3 class="temperature"></h3>
-        <p class="weather"></p>
+        <h3 class="temperature"><span class="celsius">
+        </span>
+      <span class="fahrenheit hidden">
+      </span></h3>
+      <div>
+        <span class="weather"></span><span><img src="" class="icon" alt="icon" srcset=""></span>
+        </div>
       </div>
     </div>
-    <div class="upcoming-temp">
-      <div class="day1">
-        <p class="day">sunday</p>
-        <p class="temp">25°</p>
-      </div>
-      <div class="day1">
-        <p class="day">sunday</p>
-        <p class="temp">25°</p>
-      </div>
-      <div class="day1">
-        <p class="day">sunday</p>
-        <p class="temp">25°</p>
-      </div>
-      <div class="day1">
-        <p class="day">sunday</p>
-        <p class="temp">25°</p>
-      </div>
-      <div class="day1">
-        <p class="day">sunday</p>
-        <p class="temp">25°</p>
-      </div>
-    </div>
-    <input class="search-location" type="text" value="Location">
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="index.js"></script>
